IDM2.0 Rearchitecture
Change-Id: I0954557185f312e49ffc88acba891a4bb08b2429